# aiidalab

./: .coverage  .gitignore  .gitmodules  .pre-commit-config.yaml  .prospector.yaml  .readthedocs.yml  .travis.yml  LICENSE  MANIFEST.in  Pipfile  README.md  install_dev.sh  pyproject.toml  requirements.txt  setup.cfg  setup.json  setup.py  tox.ini
.github/: dependabot.yml  release.yml
.github/workflows/: ci.yml  publish.yml
aiidalab/: __init__.py  __main__.py  app.py  app_manager.py  appstore.py  config.py  environment.py  fetch.py  git_util.py  home.py  kernel.py  metadata.py  utils.py  widgets.py
aiidalab/registry/: __init__.py  api.py  apps_index.py  apps_meta.py  core.py  git_util.py  html.py  releases.py  template_filters.py  util.py  web.py  yaml.py
aiidalab/registry/schemas/: app.schema.json  apps.schema.json  apps_index.schema.json  environment.schema.json  metadata.schema.json
aiidalab/registry/schemas/v1/: app.schema.json  apps.schema.json  apps_index.schema.json  apps_meta.schema.json  categories.schema.json  environment.schema.json  metadata.schema.json
aiidalab/registry/schemas/v2/: app.schema.json  apps.schema.json  apps_index.schema.json  categories.schema.json  environment.schema.json  metadata.schema.json
aiidalab/registry/static/api/: openapi-v1.yaml
aiidalab/registry/static/static/css/: style.css
aiidalab/registry/templates/: app_page.html  app_page_base.html  base.html  index.html  index_base.html  main_index.html  singlepage.html
docs/: .gitignore  Makefile
docs/source/: conf.py  index.rst
docs/source/admin/: index.rst
docs/source/app_development/: create.rst  example_qebands.rst  examples.rst  first_app.rst  index.rst  publish.rst  widgets.rst
docs/source/deployment/: index.rst
docs/source/development/: index.rst  release.rst
docs/source/maintain/: index.rst
docs/source/reference/: index.rst
docs/source/usage/: home.rst  index.rst  management.rst  store.rst
docs/source/usage/access/: desktop.rst  direct.rst  index.rst  launch.rst  local.rst
docs/source/widgets/: index.rst
jupyter-config/jupyter_notebook_config.d/: aiidalab.json
jupyter-config/nbconfig/notebook.d/: aiidalab.json
templates/: README.md  config.yaml  generate.sh  privacy-policy.j2  requirements.txt  terms-of-use.j2
tests/: conftest.py  test_app.py  test_appclass.py  test_appdataclass.py  test_cli.py  test_conftest.py  test_imports.py  test_install.py  test_registry.py  test_utils.py
tests/static/: app_registry.yaml  apps.yaml  categories.yaml
tests/static/app_with_setupcfg/: setup.cfg
