[build-system]
# this version is required to support reading of version in setup.cfg
requires = ["setuptools>=46.4.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88
show-fixes = true
target-version = "py38"

[tool.ruff.lint]
ignore = ["E501", "E402", "B904", "TRY003"]
select = [
  "A",    # flake8-builtins
  "ARG",  # flake8-unused-arguments
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "E",    # pycodestyle
  "F",    # pyflakes
  "I",    # isort
  "N",    # pep8-naming
  "PLE",  # pylint error rules
  "PLW",  # pylint warning rules
  "PLC",  # pylint convention rules
  "RUF",  # ruff-specific rules
  "TRY",  # Tryceratops
  "UP"    # pyupgrade
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG001"]

[tool.pytest.ini_options]
addopts = '--strict-config --strict-markers -ra --durations-min=1 --durations=10'
markers = [
  'registry: Tests relating to AiiDAlab registry functionality',
]
