[metadata]
name = aiidalab
version = attr: aiidalab.__version__
description = Implements core functions of AiiDAlab.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aiidalab/aiidalab
author = The AiiDAlab team
author_email = aiidalab@materialscloud.org
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: AiiDA
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
install_requires =
    CacheControl~=0.12
    Jinja2>=2.11.3,<4
    MarkupSafe==2.0.1
    aiida-core>=2.0.0,<3
    cachetools~=4.1
    click>=7.0,<9
    click-spinner~=0.1
    dacite~=1.6
    dulwich~=0.20
    ipython~=7.0
    jsonref~=0.2
    jsonschema[format]~=3.2
    packaging>=20.1,<22
    requests~=2.27
    requests-cache~=0.5
    requests-mock~=1.8
    ruamel.yaml~=0.16
    tabulate~=0.8
    toml~=0.10
    traitlets~=5.0
    urllib3~=1.24
    watchdog~=2.3
python_requires = >=3.7
include_package_data = True
zip_safe = False

[options.entry_points]
console_scripts =
    aiidalab = aiidalab.__main__:cli

[options.extras_require]
dev =
    bumpver==2021.1114
    pre-commit==2.11.1
    pytest==7.2.1
docs =
    pydata-sphinx-theme~=0.8.0
    sphinx~=4.4.0
    sphinx-panels~=0.6.0
    sphinxcontrib-contentui
    sphinxcontrib-details-directive;python_version>='3.0'

[flake8]
ignore =
    E501
    W503
    E203
exclude =
    docs/

[bumpver]
current_version = "v22.11.0"
version_pattern = "v0Y.0M.PATCH[PYTAGNUM]"
commit_message = "Bump version {old_version} -> {new_version}"
commit = True
tag = True
push = True

[bumpver:file_patterns]
aiidalab/__init__.py =
    __version__ = "{pep440_version}"
