[metadata]
name = aiidalab
version = attr: aiidalab.__version__
description = Implements core functions of AiiDAlab.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aiidalab/aiidalab
author = The AiiDAlab team
author_email = aiidalab@materialscloud.org
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: AiiDA
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
install_requires =
    cachetools~=4.1
    click>=7.0,<9
    click-spinner~=0.1
    dulwich~=0.20
    packaging>=20.1
    pip
    requests~=2.27
    requests-cache~=1.0
    setuptools
    tabulate~=0.8
    toml~=0.10
    traitlets~=5.0
    watchdog~=5.0
python_requires = >=3.9
include_package_data = True
zip_safe = False

[options.entry_points]
console_scripts =
    aiidalab = aiidalab.__main__:cli

[options.extras_require]
dev =
    bumpver>=2021.1114
    pre-commit>=3.5
    pytest~=8.2.0
    pytest-cov~=5.0
    ruamel.yaml~=0.16
registry =
    CacheControl~=0.12
    jsonref~=0.2
    jsonschema[format]~=3.2
    Jinja2~=3.0
    requests-mock~=1.8
    ruamel.yaml~=0.16
docs =
    pydata-sphinx-theme~=0.13.3
    sphinx~=4.4.0
    sphinx-panels~=0.6.0
    sphinxcontrib-contentui
    sphinxcontrib-details-directive;python_version>='3.0'
    # NOTE: These need to be pinned due to incompatibility with sphinx<5.0
    # https://github.com/sphinx-doc/sphinx/issues/11890
    # We can't easily upgrade to sphinx v5.0 since sphinx-panels is incompatible
    # and is deprecated, we'd need to migrate to sphinx-design.
    # https://sphinx-design.readthedocs.io/en/latest/get_started.html#migrating-from-sphinx-panels
    sphinxcontrib-applehelp==1.0.4
    sphinxcontrib-devhelp==1.0.2
    sphinxcontrib-htmlhelp==2.0.1
    sphinxcontrib-qthelp==1.0.3
    sphinxcontrib-serializinghtml==1.1.5

[mypy]
strict = True
ignore_missing_imports = True
strict_optional = True
show_error_codes = True

[mypy-aiidalab.registry.*]
ignore_errors = True

[bumpver]
current_version = "v24.09.0"
version_pattern = "v0Y.0M.PATCH[PYTAGNUM]"
commit_message = "Bump version {old_version} -> {new_version}"
commit = True
tag = True
push = True

[bumpver:file_patterns]
aiidalab/__init__.py =
    __version__ = "{pep440_version}"
