# NOTE: Because we don't have setup.py,
# `pip install` will not actually be invoked.
[aiidalab]
title = Hello World
categories = quantum

[metadata]
name = hello-world
version = 0.1.1
author = AiiDAlab team
description = ISPG applications in AiiDALab

# Only define python requirements that are by definition
# already present. We also make one requirement invalid
# to test that we do not crash in that case.
[options]
python_requires = >=3.9
install_requires =
    pip
    pytest # This comment makes this requirement invalid
